--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
-  "presets": ["babel-preset-expo"],
-  "env": {
-    "development": {
-      "plugins": ["transform-react-jsx-source"]
-    }
-  }
+  "presets": [
+    "@babel/preset-env",
+    "@babel/preset-react"
+   ],
+   "plugins": [
+    "@babel/plugin-proposal-class-properties"
+   ]
 }
