--- a/package.json
+++ b/package.json
@@ -1,26 +1,34 @@
 {
   "name": "pseudo-class-example",
-  "version": "0.1.0",
-  "private": true,
-  "devDependencies": {
-    "react-native-scripts": "1.14.0",
-    "jest-expo": "~27.0.0",
-    "react-test-renderer": "16.3.1"
-  },
-  "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
+  "version": "0.0.1",
+  "main": "dist",
   "scripts": {
-    "start": "react-native-scripts start",
-    "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "jest"
+    "build": "webpack"
   },
-  "jest": {
-    "preset": "jest-expo"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shagamii/pseudo-class-example.git"
   },
+  "keywords": [],
+  "author": "RyuichiSakagami <shagamiiiii@gmail.com>",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Shagamii/pseudo-class-example/issues"
+  },
+  "homepage": "https://github.com/Shagamii/pseudo-class-example#readme",
   "dependencies": {
-    "expo": "^27.0.1",
-    "react": "16.3.1",
-    "react-native": "~0.55.2"
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-primitives": "^0.6.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0-beta",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-serve": "^2.0.2"
   }
 }
