--- a/example/web/package.json
+++ b/example/web/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-scripts": "1.1.5",
-    "pseudo-class-example": "file:../.."
+    "pseudo-class-example": "file:../..",
+    "react": "16.3.2",
+    "react-dom": "16.3.3",
+    "react-scripts": "1.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
