--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "pseudo-class-example",
   "version": "0.0.1",
-  "main": "dist",
+  "main": "src/index",
   "scripts": {
-    "build": "webpack"
+    "build": "rm -rf dist && babel -d dist src"
   },
   "repository": {
     "type": "git",
@@ -12,23 +12,23 @@
   "keywords": [],
   "author": "RyuichiSakagami <shagamiiiii@gmail.com>",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Shagamii/pseudo-class-example/issues"
-  },
-  "homepage": "https://github.com/Shagamii/pseudo-class-example#readme",
   "dependencies": {
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
+    "react": "16.3.2",
+    "react-dom": "16.3.3",
+    "react-native-web": "^0.8.10",
     "react-primitives": "^0.6.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.1",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0-beta",
     "webpack": "^4.19.0",
     "webpack-cli": "^3.1.0",
+    "webpack-node-externals": "^1.7.2",
     "webpack-serve": "^2.0.2"
   }
 }
