--- a/example/web/package.json
+++ b/example/web/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "dependencies": {
     "pseudo-class-example": "file:../..",
-    "react": "16.3.2",
-    "react-dom": "16.3.3",
+    "react": "~16.4.0",
+    "react-dom": "~16.4.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
