--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
   "author": "RyuichiSakagami <shagamiiiii@gmail.com>",
   "license": "ISC",
   "dependencies": {
-    "react": "16.3.2",
-    "react-dom": "16.3.3",
-    "react-native": "^0.57.0",
-    "react-native-web": "^0.8.10",
+    "react": "~16.4.0",
     "react-primitives": "^0.6.1"
   },
   "devDependencies": {
@@ -27,10 +24,6 @@
     "babel-plugin-syntax-object-rest-spread": "^6.5.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-preset-react-native": "^4.0.1",
-    "webpack": "^4.19.0",
-    "webpack-cli": "^3.1.0",
-    "webpack-node-externals": "^1.7.2",
-    "webpack-serve": "^2.0.2"
+    "babel-preset-react-native": "^4.0.1"
   }
 }
