--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "react": "~16.4.0",
+    "react-native": "~0.55.2",
     "react-primitives": "^0.6.1"
   },
   "devDependencies": {
